# advpi

./: .gitignore  CMakeLists.txt  log.md
docs/: README.md  log.md
include/: arm_code.h  arm_code.hpp  gba_memory.h  gba_memory.hpp  gba_vm.h  gba_vm.hpp  kvm_utils.h  kvm_utils.hpp  main.h
include/exceptions/: InitializationError.hpp  initialization_error.hpp
include/gba/: cart.cpp  cart.hpp  gpu.hpp
include/gba/io/: mmioHandler.hpp  timerHandler.hpp
include/kvm/: kvm_mmu.hpp  vcpu.hpp  virtual_machine.hpp
include/sdl/: sdl2.hpp
include/util/: byte.hpp
src/: arm_code.c  arm_code.cpp  arm_code.h  gba_memory.c  gba_memory.cpp  intelstub.h  kvm_utils.c  kvm_utils.cpp  main.c  main.cpp  main.h  util.h
src/exceptions/: InitializationError.cpp
src/gba/io/: mmioHandler.cpp
src/kvm/: kvm_mmu.cpp  vcpu.cpp  virtual_machine.cpp
src/sdl/: sdl2.cpp
study/: 01.md  README.md
test/: endian.cc
test_src/: README.md  custom_bios.S  one.S  simple.S
